<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioBuah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/Mangga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mangga"
            android:checked="true" />
        <RadioButton
            android:id="@+id/Apel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_apel" />
        <RadioButton
            android:id="@+id/Jeruk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_jeruk" />

    </RadioGroup>
    <EditText
        android:id="@+id/etnama1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/etnama2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hasilnya"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/etnama3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        />
    <Button
        android:id="@+id/rbtn_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_button1" />
    <Button
        android:id="@+id/rbtn_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_button2"
        />
</LinearLayout>